main/static/main/style.css
p {
    font-family: 'Carlito', sans-serif;
}
p.basic-text {
    font-size: 20px;
}
p.project-desc {
    font-size: 18px;
}
p.project-date {
    font-size: 14px;
    color: #808080;
}
.btn-outline-discord {
    --btn-color: #5865F2;
    color: var(--btn-color);
    border-color: var(--btn-color);
}
.btn-outline-discord:hover {
    --btn-color: #5865F2;
    color: #fff;
    background-color: var(--btn-color);
    border-color: var(--btn-color);
}
.btn-outline-twitter {
    --btn-color: #1DA1F2;
    color: var(--btn-color);
    border-color: var(--btn-color);
}
.btn-outline-twitter:hover {
    --btn-color: #1DA1F2;
    color: #fff;
    background-color: var(--btn-color);
    border-color: var(--btn-color);
}
.btn-outline-youtube {
    --btn-color: #FF0000;
    color: var(--btn-color);
    border-color: var(--btn-color);
}
.btn-outline-youtube:hover {
    --btn-color: #FF0000;
    color: #fff;
    background-color: var(--btn-color);
    border-color: var(--btn-color);
}
.project-link {
    color: #fff;
    text-decoration: underline;
    text-decoration-color: #fff;
    text-decoration-thickness: 2px;
}
.bg-footer {
    background-color: #2F3136;
}

